--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,7 +22,8 @@
 	     0
 	 ],
 	"react/forbid-prop-types": "off", 
-	"react/default-props-match-prop-types": "off",
+	"react/prop-types": 0,
+        "react/default-props-match-prop-types": "off",
         "indent": [
             "error",
             2
