--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "firebase": "^8.7.1",
     "firebaseui": "^4.8.1",
     "react": "^17.0.2",
+    "react-card-flip": "^1.1.1",
     "react-chartjs-2": "^3.0.4",
     "react-dom": "^17.0.2",
     "react-firebaseui": "^5.0.2",
     "react-redux": "^7.2.4",
+    "react-robohash": "^1.0.9",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-window": "^1.8.6",
