--- a/package.json
+++ b/package.json
@@ -12,15 +12,10 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "chart.js": "^3.5.0",
-    "dotenv": "^10.0.0",
-    "firebase": "^8.7.1",
-    "firebaseui": "^4.8.1",
     "react": "^17.0.2",
     "react-card-flip": "^1.1.1",
-    "react-chartjs-2": "^3.0.4",
     "react-dom": "^17.0.2",
-    "react-firebaseui": "^5.0.2",
+    "react-qr-code": "^2.0.1",
     "react-redux": "^7.2.4",
     "react-robohash": "^1.0.9",
     "react-router-dom": "^5.2.0",
@@ -28,9 +23,6 @@
     "react-window": "^1.8.6",
     "recharts": "^2.0.10",
     "redux": "^4.1.0",
-    "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.3.0",
-    "unsplash-js": "^7.0.15",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
